--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -102,7 +102,7 @@
 				entertainment and challenge.</span
                 >
             </p>
-            <div class="row story">
+            <div class="row story order">
                 <div class="col-md-6">
                     <h3>Set in 17th Century Europe</h3>
                     <p>
@@ -119,14 +119,13 @@
                         {#                        </a>#}
                     </div>
                 </div>
+            </div>
+            <div class="row story">
                 <div class="col-md-6">
                     <div class="image">
-                        {#                        <a href="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}"#}
-                        target="_blank">
-                        <img src="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}"
-                             alt="17th Century Europe" class="img-fluid"/>
-                        {#                        </a>#}
-
+                        {#<a href="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}">#}
+                            <img src="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}" alt="17th Century Europe" class="img-fluid"/>
+                        {#</a>#}
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -137,6 +136,8 @@
                         and strife of the general populace.
                     </p>
                 </div>
+            </div>
+            <div class="row story order">
                 <div class="col-md-6">
                     <h3>Engage in Pike and Shot Warfare</h3>
                     <p>
@@ -152,6 +153,8 @@
                         {#                        </a>#}
                     </div>
                 </div>
+            </div>
+            <div class="row story">
                 <div class="col-md-6">
                     <div class="image">
                         {#                        <a href="{% static 'app/assets/images/about_game/manage-supplies.png' %}" target="_blank">#}
