fixes alignment of image in mobile

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row story">
+            <div class="row story order-two">
                 <div class="col-md-6">
                     <div class="image">
                         {#<a href="{% static 'app/assets/images/about_game/follow-captivating-story.png' %}">#}
@@ -154,7 +154,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row story">
+            <div class="row story order-two">
                 <div class="col-md-6">
                     <div class="image">
                         {#                        <a href="{% static 'app/assets/images/about_game/manage-supplies.png' %}" target="_blank">#}
