--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -49,10 +49,10 @@
                 <form action="" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label>
-                            <input name="email" type="email" class="form-control"
+{#                        <label>#}
+                            <input name="email" type="email" class="form-control"  {# noqa #}
                                    placeholder="Sign up with Email to Receive Updates and Freebies"/>
-                        </label>
+{#                        </label>#}
                     </div>
                     <div>
                         <button type="submit" class="btn btn-primary">Sign Me Up!</button>
