--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -316,9 +316,9 @@
             <form action="" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label>
+{#                    <label>#}
                         <input name="email" type="email" class="form-control" placeholder="Email address"/>
-                    </label>
+{#                    </label>#}
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary">Subscribe</button>
