--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -34,7 +34,7 @@
                     Become a military mastermind!
                     <span>Command musketeers, pikemen, cannons, and a variety of special units on the battlefield.</span>
                 </p>
-                <a href="https://www.youtube.com/watch?v=vmbEyrHarnY&ab_channel=1630ThirtyYears%27War" target="_blank"
+                <a href="https://www.youtube.com/watch?v=dXa-clQIS_A" target="_blank"
                    class="btn btn-secondary">
                     <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
@@ -67,7 +67,7 @@
                 <img src="{% static 'app/assets/svgs/coming-soon.svg' %}" alt="coming-soon">
             </div>
             <div class="video-wrapper">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vmbEyrHarnY"></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dXa-clQIS_A"></iframe>
             </div>
             <p>
                 We took over the project to finish its development and marketing.
