--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -335,7 +335,7 @@
         </section>
         <section class="join-cummunity">
             <h4>JOIN THE COMMUNITY</h4>
-            <h5>hello@buttondownstudios.com</h5>
+            <h5>contactus@buttondownstudios.com</h5>
             <ul>
                 <li>
                     <a href="{{ facebook_1630_link }}" target="_blank">
