updates the kickstart description

--- a/game_1630/templates/app/homepage.html
+++ b/game_1630/templates/app/homepage.html
@@ -70,18 +70,17 @@
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dXa-clQIS_A"></iframe>
             </div>
             <p>
-                We took over the project to finish its development and marketing.
-                <span
-                >The game is 80% complete and the last 20% stretch is the hardest to cross without support from Kickstarter to bring us home.</span
-                >
-                <span
-                >We have been funding the project out of our own pocket for some time and it is becoming increasingly difficult for us to keep up
-				with the expenses.</span
-                >
-                <span
-                >We are moving towards Kickstarter because we believe that with the help of the Backer Community; we can ensure the game is released
-				in the best possible state.</span
-                >
+                We're a small indie studio and need your help to bring our passion project to life. Kickstarter will allow us to overcome the final hurdle and share our game with the world.
+                <span>
+                    The game is 80% complete and the last 20% stretch is the hardest to cross without support from Kickstarter to bring us home.
+                </span>
+                <span>
+                    We have been funding the project out of our own pocket for some time, and it is becoming increasingly difficult for us to keep up
+				with the expenses.
+                </span>
+                <span>
+                    We are moving towards Kickstarter because we believe that with the help of the Backer Community; we can ensure the game is released in the best possible state.
+                </span>
             </p>
             <a href="{{ kickstarter_link }}" target="_blank" class="btn btn-primary">
                 Kickstarter page
